--- a/src/app/components/navbar/navbar.scss
+++ b/src/app/components/navbar/navbar.scss
@@ -5,9 +5,10 @@
   left:0;
   width:100%;
   z-index:999999;
+  background:white;
 }
 
-/* NAVBAR */S
+/* NAVBAR */
 
 .navbar{
 
