--- a/src/app/pages/home/home.css
+++ b/src/app/pages/home/home.css
@@ -7,7 +7,6 @@
 .page{
   background:#f3f4f6;
   min-height:100vh;
-  padding-top:80px;
 }
 
 /* LAYOUT */
